--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,12 +33,16 @@ jobs:
   　- name: actions-cloc
     　uses: maxfie1d/actions-cloc@v1
 
+    - name: Publish Checkstyle report
+      uses: Juuxel/publish-checkstyle-report@v1
+      if: ${{ failure() || success() }}
+      with:
+        # required: The glob paths to report XML files as a multiline string
+        # The format below works for the Gradle Checkstyle plugin with default configurations
+        reports: |
+          build/reports/checkstyle/*.xml
+      
     - name: Publish Checkstyle Report
       uses: scacap/action-surefire-report@v1
       with:
         checkstyle_report_paths: '**/build/reports/checkstyle/*.xml'
-
-    - name: Publish SpotBugs Report
-      uses: rickstaa/action-spotbugs@v1
-      with:
-        spotbugs_report_paths: '**/build/reports/spotbugs/*.xml'
