--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: CI Workflow
+name: Count Lines of Code
 
 on:
   push:
@@ -9,37 +9,21 @@ on:
       - main
 
 jobs:
-  build:
+  count-lines:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
+    - name: Install cloc
+      run: sudo apt-get install -y cloc
+
+    - name: Run cloc
+      run: cloc . --out=cloc-report.txt
+
+    - name: Upload cloc report
+      uses: actions/upload-artifact@v2
       with:
-        java-version: '11'
-
-    - name: Build with Gradle
-      run: ./gradlew build
-
-    - name: Run Checkstyle
-      run: ./gradlew checkstyleMain
-
-    - name: Run SpotBugs
-      run: ./gradlew spotbugsMain
-
-    - name: Publish Checkstyle report
-      uses: Juuxel/publish-checkstyle-report@v1
-      if: ${{ failure() || success() }}
-      with:
-        # required: The glob paths to report XML files as a multiline string
-        # The format below works for the Gradle Checkstyle plugin with default configurations
-        reports: |
-          build/reports/checkstyle/*.xml
-      
-    - name: Publish Checkstyle Report
-      uses: scacap/action-surefire-report@v1
-      with:
-        checkstyle_report_paths: '**/build/reports/checkstyle/*.xml'
+        name: cloc-report
+        path: cloc-report.txt
