--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,3 +27,6 @@ jobs:
       with:
         name: cloc-report
         path: cloc-report.txt
+
+    - name: actions-cloc
+      uses: maxfie1d/actions-cloc@v1
